wip: dialog squishing issue

--- a/public/styles.css
+++ b/public/styles.css
@@ -22,7 +22,8 @@ h2 {
     font-size: 31px;
     text-align: center;
     font-weight: normal;
-    margin: 10px 0 18px;
+    margin: 0;
+    padding: 10px 0 18px;
 }
 
 h3 {
@@ -53,36 +54,51 @@ img.icon {
 }
 
 #date-picker, #time-picker {
-    display: inline-block;
+    float: left;
     margin-right: 40px;
 }
 
 .selector-container {
+  position: relative;
+  cursor: pointer;
+  z-index: 3;
+}
+
+.selector {
+    width: 470px;
+    height: 70px;
     background-color: #fff;
     border: 4px solid #e0e0e0;
     position: relative;
     padding: 10px;
-    cursor: pointer;
 }
 
-.selector-container.active {
-    border-color: #ee780c;
+.selector td.icon-container {
+    width: 10%;
+    text-align: right;
 }
 
-td.selected-container {
+.selector td.selected-container {
+    width: 90%;
+    text-align: left;
+}
+
+.selector td.selected-container h3 {
     padding-left: 10px;
 }
 
-.dialog {
-    border: 2px solid #acacac;
-    background-color: #fff;
-    width: auto;
-    position: fixed;
-    top: 82px;
-    z-index: 3;
+.selector.active {
+    border-color: #ee780c;
 }
 
-.dialog tr.header,
+.dialog {
+    position: absolute;
+    top: 70px;
+    border: 2px solid #acacac;
+    background-color: #fff;
+}
+
+.dialog h2,
 .dialog tr.subheader {
     background: url('images/grey_divider.png') bottom repeat-x;
 }
@@ -97,23 +113,17 @@ td.selected-container {
  z-index: 2;
 }
 
-#date-picker .selector-container {
-    width: 470px;
-}
-
-#date-picker .dialog {
+/*#date-picker .dialog {
     left: 18px;
-}
+}*/
 
 #date-picker td.month-nav-container {
     text-align: center;
     width: 50px;
-    vertical-align: top;
 }
 
 #date-picker td.month-nav-container img {
-    display: inline;
-    padding-top: 160px;
+    padding-top: 65px;
 }
 
 #date-picker tr.week td {
